--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "basic-express-api",
+  "name": "vercel-testing",
   "version": "1.0.0",
-  "description": "Basic express server",
-  "author": "Hayk Simonyan",
-  "license": "",
-  "main": "server.js",
-  "engines" : {
-    "node" : "18.x"
+  "description": "node express testing",
+  "main": "index.js",
+  "engines": {
+    "node": "18.x"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
