--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,25 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/",
-      "methods": ["GET", , "PUT", "PATCH", "POST", "DELETE"],
-      "headers": { "Access-Control-Allow-Origin": "*" }
-    }
-  ]
+    "version": 2,
+    "builds": [
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/",
+            "methods": [
+                "GET",
+                "PUT",
+                "PATCH",
+                "POST",
+                "DELETE"
+            ],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
+        }
+    ]
 }
