--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "argon2": "^0.31.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
