--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "@types/jsonwebtoken": "^9.0.5",
     "argon2": "^0.31.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "prisma": "^5.9.1"
   }
