--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "prisma generate"
@@ -21,7 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "prisma": "^5.10.2"
