--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,8 @@
                 "PUT",
                 "PATCH",
                 "POST",
-                "DELETE"
+                "DELETE",
+                "OPTIONS"
             ],
             "headers": {
                 "Access-Control-Allow-Origin": "*"
