--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
                 "OPTIONS"
             ],
             "headers": {
-                "Access-Control-Allow-Origin": "*"
+                "Access-Control-Allow-Origin": "https//belajarexpress.vercel.app"
             }
         }
     ]
