--- a/vercel.json
+++ b/vercel.json
@@ -18,10 +18,29 @@
                 "DELETE",
                 "OPTIONS"
             ],
-            "headers": {
-                "Access-Control-Allow-Origin": "https://cashier-pos.netlify.app, http://localhost:5173",
-                "Access-Control-Allow-Credentials": "true"
-            }
+            "headers": [
+                {
+                    "source": "/api/(.*)",
+                    "headers": [
+                        {
+                            "key": "Access-Control-Allow-Credentials",
+                            "value": "true"
+                        },
+                        {
+                            "key": "Access-Control-Allow-Origin",
+                            "value": "*"
+                        },
+                        {
+                            "key": "Access-Control-Allow-Methods",
+                            "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+                        },
+                        {
+                            "key": "Access-Control-Allow-Headers",
+                            "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+                        }
+                    ]
+                }
+            ]
         }
     ]
 }
