--- a/vercel.json
+++ b/vercel.json
@@ -18,29 +18,10 @@
                 "DELETE",
                 "OPTIONS"
             ],
-            "headers": [
-                {
-                    "source": "/api/(.*)",
-                    "headers": [
-                        {
-                            "key": "Access-Control-Allow-Credentials",
-                            "value": "true"
-                        },
-                        {
-                            "key": "Access-Control-Allow-Origin",
-                            "value": "*"
-                        },
-                        {
-                            "key": "Access-Control-Allow-Methods",
-                            "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-                        },
-                        {
-                            "key": "Access-Control-Allow-Headers",
-                            "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-                        }
-                    ]
-                }
-            ]
+            "headers": {
+                "Access-Control-Allow-Origin": "http://localhost:5173, https://cashier-pos.netlify.app",
+                "Access-Control-Allow-Credentials": "true"
+            }
         }
     ]
 }
