--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
                 "OPTIONS"
             ],
             "headers": {
-                "Access-Control-Allow-Origin": "http://localhost:5173, https://cashier-pos.netlify.app",
+                "Access-Control-Allow-Origin": "http://localhost:5173",
                 "Access-Control-Allow-Credentials": "true"
             }
         }
