--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.0",
-    "sweetalert2": "^11.12.4"
+    "nodemon": "^3.1.0"
   },
   "devDependencies": {
     "prisma": "^5.10.2"
